small hotfix for subtitle-scroll text not showing correctly

--- a/css/articles.css
+++ b/css/articles.css
@@ -305,7 +305,7 @@ navlink {
 }
 
 .subtitle-scroll {
-  font-family: "SF Text Light";
+  font-family: "SF Text Regular";
   font-size: 20px;
 }
 
